k8s/blog-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
  labels:
    app: blog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 3
  template:
    metadata:
      labels:
        app: blog
    spec:
      containers:
        - name: blog
          image: meraviglioso8/blog:latest
          ports:
            - name: blog
              containerPort: 7777
              protocol: TCP
