k8s/products-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products
  labels:
    app: products
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 3
  template:
    metadata:
      labels:
        app: products
    spec:
      containers:
        - name: products
          image: meraviglioso8/products:latest
          ports:
            - name: products
              containerPort: 7777
              protocol: TCP
