k8s/authen-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authen
spec:
  selector:
    app: authen
  type: ClusterIP
  ports:
    - port: 5012
      targetPort: 5012
      protocol: TCP
