k8s/autho-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: autho
spec:
  selector:
    app: autho
  type: ClusterIP
  ports:
    - port: 5013
      targetPort: 5013
      protocol: TCP
