k8s/blog-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog
spec:
  selector:
    app: blog
  type: ClusterIP
  ports:
    - port: 7777
      targetPort: 7777
      protocol: TCP
