k8s/products-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: products
spec:
  selector:
    app: products
  type: ClusterIP
  ports:
    - port: 8888
      targetPort: 8888
      protocol: TCP
